SSCSCI-2322: restructure runner for more flexibility
- move orchestration details to the individual triggers
- use the runner class to take away the main heavylifting from the trigger classes